--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
 										<div class="profile-image mb-4">
 											<img src="images/avatar/1.jpg" class="rounded-circle" alt="">
 										</div>
-										<h4 class="fs-22 text-black mb-1">Lee Ramos</h4>
+										<h4 class="fs-22 text-black mb-1">Evans Gomez</h4>
 										<p class="mb-4">Super admin</p>
 										<div class="row">
 											<div class="col-4 p-0">
